--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             </div>
             <span class="right">
                 <p>Summary</p>
-                <span class="reaction"> <img src="./assets/images/icon-reaction.svg" alt="reaction"><span
+                <span class="reaction"><a href="https://imgbb.com/"> <img src="https://i.ibb.co/XS8J5dz/icon-reaction.jpg" alt="icon-reaction" border="0"></a><span>
                         class="text">Reaction</span><span class="num1">80</span> <span class="num2">/100</span></span>
                         <br>
-                <span class="memory"> <img src="./assets/images/icon-memory.svg" alt="memory"><span
+                <span class="memory"> <a href="https://imgbb.com/"><img src="https://i.ibb.co/wd7nQBW/icon-memory.jpg" alt="icon-memory" border="0"></a><span
                         class="text1">Memory</span><span class="num3">92</span> <span class="num4">/100</span></span>
                         <br>
-                <span class="verbal"> <img src="./assets/images/icon-verbal.svg" alt="verbal"><span
+                <span class="verbal"> <a href="https://imgbb.com/"><img src="https://i.ibb.co/72VgKjJ/icon-verbal.jpg" alt="icon-verbal" border="0"></a><span
                         class="text2">Verbal</span><span class="num5">61</span> <span class="num6">/100</span></span>
                         <br>
-                <span class="visual"> <img src="./assets/images/icon-visual.svg" alt="visual"><span
+                <span class="visual"> <a href="https://imgbb.com/"><img src="https://i.ibb.co/mTWt0sc/icon-visual.jpg" alt="icon-visual" border="0"></a><span
                         class="text3">Visual</span><span class="num7">72</span> <span class="num8">/100</span></span>
                         <br>
                 <button>Continue</button>
@@ -50,3 +50,7 @@
 </body>
 
 </html>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/XS8J5dz/icon-reaction.jpg" alt="icon-reaction" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/wd7nQBW/icon-memory.jpg" alt="icon-memory" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/72VgKjJ/icon-verbal.jpg" alt="icon-verbal" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/mTWt0sc/icon-visual.jpg" alt="icon-visual" border="0"></a>
