--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <span class="right">
                 <p>Summary</p>
-                <span class="reaction"><a href="https://imgbb.com/"> <img src="https://i.ibb.co/XS8J5dz/icon-reaction.jpg" alt="icon-reaction" border="0"></a><span>
+                <span class="reaction"><a href="https://imgbb.com/"> <img src="https://i.ibb.co/XS8J5dz/icon-reaction.jpg" alt="icon-reaction" border="0"></a><span
                         class="text">Reaction</span><span class="num1">80</span> <span class="num2">/100</span></span>
                         <br>
                 <span class="memory"> <a href="https://imgbb.com/"><img src="https://i.ibb.co/wd7nQBW/icon-memory.jpg" alt="icon-memory" border="0"></a><span
@@ -50,7 +50,4 @@
 </body>
 
 </html>
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/XS8J5dz/icon-reaction.jpg" alt="icon-reaction" border="0"></a>
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/wd7nQBW/icon-memory.jpg" alt="icon-memory" border="0"></a>
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/72VgKjJ/icon-verbal.jpg" alt="icon-verbal" border="0"></a>
-<a href="https://imgbb.com/"><img src="https://i.ibb.co/mTWt0sc/icon-visual.jpg" alt="icon-visual" border="0"></a>
+
